<resources>
    <string name="app_name">GetMeCab</string>

    <string name="title_section1">HOME</string>
    <string name="title_section2">MY PROFILE</string>
    <string name="title_section3">ABOUT US</string>
    <string name="title_section4">BOOKING HISTORY</string>
    <string name="title_section5">FEEDBACK</string>
    <string name="title_section6">SEND CURRENT LOCATION</string>
    <string name="title_section7">SEND LOCATION MESSAGE</string>
    <string name="title_section8">CONTACT US</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="fromcity">From city</string>
    <string name="tocity">To city</string>
    <string name="traveldate">Travel date</string>
    <string name="traveltime">Pickup time</string>
    <string name="duration">Travel duration in days</string>
    <string name="advance">Pay advance now for immediate confirmation.</string>


    <string name="err_fromcity">Select From city</string>
    <string name="err_tocity">Select To city</string>
    <string name="err_traveldate">Select Travel date</string>
    <string name="err_traveltime">Select Pickup time</string>
    <string name="err_duration">Enter travel duration</string>
    <string name="aboutus">
            GetMeCab.com is an aggregator and seller of cab rental
            inventory online. \n\nWe strive to provide high quality, affordable cab service with utmost transparency in
            terms of pricing and service delivery.
            We have a network of quality checked car rental partners across
            India which help us provide all kind of car rental services to our customers.
            \nWe currently have our services in Delhi-NCR, Mumbai, Bangalore, Hyderabad and Jaipur and
            we will soon be expanding to other cities in India as well. We serve for following
            \n\nOutstation Round Trip car rental services
            \nOutstation OneWay car rental services
            \nAirport transfer services
            \nIntracity (local) car packages
            \n\nAbout the Team:
            \nGetMeCab.com is run by IIT-IIM graduates with vast experience
            in travel e-commerce domain.
        We are a group of passionate and determined professionals who wish to create
        an excellent taxi buying experience for you by
        leveraging cutting edge technology.
        Nothing excites us more than satisfaction of our users.</string>
    <string name="contactus">Address:\nGetMeCab - Unicus Infolabs Pvt Ltd\n\nWorking Office:\n13/5, Basement,\nEast Patel Nagar,\nNew Delhi - 110008.\n\n\n<u>Registered Office:</u>\n29, Shaheed Colony A\nMalviya Nagar\nJaipur,
        Rajasthan\n\n\nE-Mail: info@getmecab.com\nTelephone:+91 901515 4545\nFax::+91-11-45679322</string>
    <string name="question1">How was the cab quality ?</string>
    <string name="question2">How was driver ?</string>
    <string name="question3">How was your car booking experience ?</string>
    <string name="question4">How was your experience with customer care ?</string>
    <!--Gps-->
    <string name="gps_alert_dialog_title">Location warning</string>
    <string name="gps_alert_dialog_message">Location and distance may be inaccurate, please Turn on GPS and wireless network in Location Settings for more accurate locations.</string>
    <string name="gps_alert_dialog_lbl">Setting</string>
    <string name="gps_alert_dialog_skip">Skip</string>


    <string name="booking_confiramation_dateandtime">Pick-up Date &amp; Time : </string>
    <string name="no_result_for_cab">Sorry ! No Cab options available for your search requirements. Please contact +91 901515 4545</string>


</resources>
