<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <include layout="@layout/back_button_header"
        android:id="@+id/header_view">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_view"
        android:layout_above="@+id/footer_view"
        android:paddingBottom="@dimen/dp10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp20">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    />

                <RadioGroup
                    android:id="@+id/feedback_grougp_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:checkedButton="@+id/default1">

                    <RadioButton
                        android:id="@+id/default1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Excellent"
                        android:textColor="@android:color/white"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Average"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Very Bad"
                        android:textColor="@android:color/white" />
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/light_gray">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp20">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <RadioGroup
                    android:id="@+id/feedback_grougp_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/default2"
                    android:weightSum="3">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Excellent"
                        android:textColor="@android:color/white"
                        android:id="@+id/default2"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Average"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Very Bad"
                        android:textColor="@android:color/white" />
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/light_gray">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp20">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <RadioGroup
                    android:id="@+id/feedback_grougp_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/default3"
                    android:weightSum="3">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Excellent"
                        android:textColor="@android:color/white"
                        android:id="@+id/default3"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Average"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Very Bad"
                        android:textColor="@android:color/white" />
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/light_gray">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp20">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <RadioGroup
                    android:id="@+id/feedback_grougp_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/default4"
                    android:weightSum="3">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Excellent"
                        android:textColor="@android:color/white"
                        android:id="@+id/default4"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Average"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Very Bad"
                        android:textColor="@android:color/white" />
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/light_gray">

            </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp20">
            <EditText
                android:id="@+id/feedback_edit_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp100"
                android:maxLines="6"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/white_round_corner_background"
                android:inputType="text"
                android:hint="Give your feedback"
                android:padding="@dimen/dp10"
                android:gravity="top"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_rounded_corner_background"
        android:layout_marginTop="@dimen/dp20"
        android:layout_alignParentBottom="true"
        android:id="@+id/footer_view"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        >
        <Button
            android:id="@+id/feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="SUBMIT"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</RelativeLayout>